# rust_chatapp

./: .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  appveyor.yml  rustfmt.toml
codegen/: Cargo.toml  build.rs
codegen/src/: lib.rs
codegen/src/decorators/: catch.rs  derive_form.rs  error.rs  route.rs
codegen/src/lints/: mod.rs  utils.rs
codegen/src/macros/: mod.rs  uri.rs
codegen/src/parser/: catch.rs  error.rs  function.rs  mod.rs  param.rs  route.rs  uri.rs  uri_macro.rs
codegen/src/utils/: expr_ext.rs  ident_ext.rs  meta_item_ext.rs  mod.rs  parser_ext.rs  span_ext.rs
codegen/tests/: compile-fail.rs  compiletest.rs  complete-decorator.rs  custom-content-type.rs  dynamic-paths.rs  error-handler.rs  methods.rs  rank_decorator.rs  segments.rs  tests.rs  type-alias-lints.rs  typed-uris.rs  ui.rs
codegen/tests/compile-fail/: absolute-mount-paths.rs  bad-attribute-form.rs  bad-attribute-param.rs  bad-error-fn.rs  bad-ident-argument.rs  bad-value-types-in-attribute.rs  data-without-post.rs  decorate-enum.rs  decorate-impl.rs  decorate-struct.rs  decorate-trait.rs  empty-segments.rs  form-field-attr.rs  ignored_params.rs  lints.rs  malformed-content-type.rs  malformed-media-type.rs  malformed-param-list.rs  phantom-declared-param.rs  route-bad-method.rs  route-invalid-method.rs  simple_unmounted.rs  typed-uri-bad-type.rs  typed-uris-bad-params.rs  typed-uris-invalid-syntax.rs  unknown-attribute-param.rs  unknown-content-type.rs  unknown-media-type.rs
codegen/tests/run-pass/: complete-decorator.rs  custom-content-type.rs  derive_form.rs  dynamic-paths.rs  empty-fn.rs  empty_form.rs  error-handler.rs  form-field-rename.rs  instanced-mounting.rs  issue-1-colliding-names.rs  methods.rs  rank_decorator.rs  refactored_rocket_no_lint_errors.rs  segments.rs  type-alias-lints.rs
codegen/tests/ui/: bad-error-fn.stderr  data-without-post.rs  data-without-post.stderr  malformed-param-list.stderr  route-bad-method.stderr  typed-uri-bad-type.rs  typed-uri-bad-type.stderr  typed-uris-bad-params.stderr  typed-uris-invalid-syntax.rs  typed-uris-invalid-syntax.stderr
codegen_next/: Cargo.toml
codegen_next/src/: codegen_ext.rs  lib.rs
contrib/: Cargo.toml
contrib/codegen/: Cargo.toml  build.rs
contrib/codegen/src/: database.rs  lib.rs
contrib/codegen/tests/: compile-test.rs
contrib/db_pools/: README.md
contrib/db_pools/codegen/: Cargo.toml
contrib/db_pools/lib/: Cargo.toml
contrib/dyn_templates/: Cargo.toml  README.md
contrib/dyn_templates/src/: context.rs  fairing.rs  handlebars_templates.rs  lib.rs  metadata.rs  template.rs
contrib/dyn_templates/tests/: templates.rs
contrib/lib/: Cargo.toml
contrib/lib/src/: databases.rs  json.rs  lib.rs  msgpack.rs  serve.rs  static_files.rs  uuid.rs
contrib/lib/tests/: compress_responder.rs  compress_responder.rs.disabled  compressed.rs  compression.rs  helmet.rs  (+6 more)
contrib/src/: json.rs  lib.rs  msgpack.rs  uuid.rs
contrib/sync_db_pools/: README.md
contrib/tests/: templates.rs
contrib/ws/: Cargo.toml  README.md
core/codegen/: Cargo.toml  build.rs
core/codegen_next/: Cargo.toml
core/http/: Cargo.toml
core/lib/: Cargo.toml  build.rs
docs/tests/: Cargo.toml
examples/: Cargo.toml  README.md
examples/config/: Cargo.toml  Rocket.toml
examples/content_types/: Cargo.toml
examples/cookies/: Cargo.toml  README.md
examples/databases/: Cargo.toml  README.md
examples/errors/: Cargo.toml
examples/extended_validation/: Cargo.toml
examples/fairings/: Cargo.toml
examples/form_kitchen_sink/: Cargo.toml
examples/form_validation/: Cargo.toml
examples/forms/: Cargo.toml  Rocket.toml
examples/from_request/: Cargo.toml
examples/handlebars_templates/: Cargo.toml
examples/hello/: Cargo.toml
examples/hello_2015/: Cargo.toml
examples/hello_2018/: Cargo.toml
examples/hello_alt_methods/: Cargo.toml
examples/hello_person/: Cargo.toml
examples/hello_query_params/: Cargo.toml
examples/hello_ranks/: Cargo.toml
examples/hello_tls/: Cargo.toml  Rocket.toml
examples/hello_world/: Cargo.toml
examples/json/: Cargo.toml
examples/managed_queue/: Cargo.toml
examples/manual_routes/: Cargo.toml
examples/msgpack/: Cargo.toml
examples/optional_redirect/: Cargo.toml
examples/optional_result/: Cargo.toml
examples/pastebin/: Cargo.toml
examples/query_params/: Cargo.toml
examples/ranking/: Cargo.toml
examples/raw_sqlite/: Cargo.toml
examples/raw_upload/: Cargo.toml
examples/redirect/: Cargo.toml
examples/request_guard/: Cargo.toml
examples/request_local_state/: Cargo.toml
examples/request_state_local_cache/: Cargo.toml
examples/responders/: Cargo.toml
examples/serialization/: Cargo.toml
examples/session/: Cargo.toml  Rocket.toml
examples/space_helmet/: Cargo.toml  Rocket.toml
examples/state/: Cargo.toml
examples/static-files/: Cargo.toml
examples/static_files/: Cargo.toml
examples/stream/: Cargo.toml
examples/templating/: Cargo.toml
examples/tera_templates/: Cargo.toml
examples/testing/: Cargo.toml
examples/tls/: Cargo.toml  Rocket.toml
examples/todo/: Cargo.toml  README.md  Rocket.toml  bootstrap.sh
examples/upgrade/: Cargo.toml  index.html
examples/uuid/: Cargo.toml
lib/: Cargo.toml  build.rs
lib/benches/: format-routing.rs  ranked-routing.rs  simple-routing.rs
lib/src/: catcher.rs  codegen.rs  content_type.rs  error.rs  ext.rs  form.rs  handler.rs  lib.rs  logger.rs  method.rs  outcome.rs  param.rs  request.rs  response.rs  rocket.rs  route.rs  router.rs  testing.rs
lib/tests/: fairing_before_head_strip-issue-546.rs  form_method-issue-45.rs  form_value_decoding-issue-82.rs  head_handling.rs  limits.rs  local-request-content-type-issue-505.rs  mount_point.rs  precise-content-type-matching.rs  query-and-non-query-dont-collide.rs  redirect_from_catcher-issue-113.rs  remote-rewrite.rs  responder_lifetime-issue-345.rs  route_guard.rs  segments-issue-41.rs  segments-issues-41-86.rs  strict_and_lenient_forms.rs
site/tests/: Cargo.toml
testbench/: Cargo.toml
testbench/src/: client.rs  lib.rs  main.rs  server.rs
(+979 files in other folders)
