[package]
name = "rust"
version = "0.1.0"
edition = "2021"



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
rocket ={version="0.5.0-rc.4", features=["json"]} 
rocket_dyn_templates = "0.1.0-rc.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21.0"


[dev-dependencies]
rand = "0.8"

