[package]
name = "rocket_codegen"
version = "0.3.0-dev"
authors = ["Sergio Benitez <sb@sergio.bz>"]
description = "Code generation for the Rocket web framework."
documentation = "https://api.rocket.rs/rocket_codegen/"
homepage = "https://rocket.rs"
repository = "https://github.com/SergioBenitez/Rocket"
readme = "../README.md"
keywords = ["rocket", "web", "framework", "code", "generation"]
license = "MIT/Apache-2.0"
build = "build.rs"

[lib]
plugin = true

[dependencies]
rocket = { version = "0.3.0-dev", path = "../lib/" }
log = "0.3"

[dev-dependencies]
compiletest_rs = "0.2"

[build-dependencies]
yansi = "0.3"
version_check = "0.1.2"
