[package]
name = "rocket_codegen_next"
version = "0.4.0-dev"
authors = ["Sergio Benitez <sb@sergio.bz>"]
description = "Procedural macros for the Rocket web framework."
documentation = "https://api.rocket.rs/rocket_codegen/"
homepage = "https://rocket.rs"
repository = "https://github.com/SergioBenitez/Rocket"
readme = "../README.md"
keywords = ["rocket", "web", "framework", "code", "generation"]
license = "MIT/Apache-2.0"

[lib]
proc-macro = true

[dependencies]
quote = "0.5.1"
proc-macro2 = { version = "0.3.6", features = ["nightly"] }
syn = { version = "0.13.1", features = ["full", "extra-traits"] }
