[package]
name = "rocket_contrib"
version = "0.1.6"
authors = ["Sergio Benitez <sb@sergio.bz>"]
description = "Community contributed libraries for the Rocket web framework."
documentation = "https://api.rocket.rs/rocket_contrib/"
homepage = "https://rocket.rs"
repository = "https://github.com/SergioBenitez/Rocket"
readme = "../README.md"
keywords = ["rocket", "web", "framework", "contrib", "contributed"]
license = "MIT/Apache-2.0"

[features]
default = ["json"]
json = ["serde", "serde_json"]
tera_templates = ["tera", "templates"]
handlebars_templates = ["handlebars", "templates"]

# Internal use only.
templates = ["serde", "serde_json", "lazy_static_macro", "glob"]
lazy_static_macro = ["lazy_static"]

[dependencies]
rocket = { version = "0.1.6", path = "../lib/" }
log = "^0.3"

# UUID dependencies.
uuid = { version = "^0.3", optional = true }

# JSON and templating dependencies.
serde = { version = "^0.8", optional = true }
serde_json = { version = "^0.8", optional = true }

# Templating dependencies only.
handlebars = { version = "^0.24", optional = true, features = ["serde_type"] }
glob = { version = "^0.2", optional = true }
lazy_static = { version = "^0.2", optional = true }
# tera = { version = "^0.6", optional = true }
tera = { git = "https://github.com/SergioBenitez/tera", optional = true }
