[package]
name = "rocket_contrib"
version = "0.2.6"
authors = ["Sergio Benitez <sb@sergio.bz>"]
description = "Community contributed libraries for the Rocket web framework."
documentation = "https://api.rocket.rs/rocket_contrib/"
homepage = "https://rocket.rs"
repository = "https://github.com/SergioBenitez/Rocket"
readme = "../README.md"
keywords = ["rocket", "web", "framework", "contrib", "contributed"]
license = "MIT/Apache-2.0"

[features]
default = ["json"]
json = ["serde", "serde_json"]
msgpack = ["serde", "rmp-serde"]
tera_templates = ["tera", "templates"]
handlebars_templates = ["handlebars", "templates"]

# Internal use only.
templates = ["serde", "serde_json", "lazy_static_macro", "glob"]
lazy_static_macro = ["lazy_static"]

[dependencies]
rocket = { version = "0.2.6", path = "../lib/" }
log = "^0.3"

# UUID dependencies.
uuid = { version = "^0.4", optional = true }

# Serialization and templating dependencies.
serde = { version = "^0.9", optional = true }
serde_json = { version = "^0.9.3", optional = true }
rmp-serde = { version = "^0.12", optional = true }

# Templating dependencies only.
handlebars = { version = "^0.25", optional = true, features = ["serde_type"] }
glob = { version = "^0.2", optional = true }
lazy_static = { version = "^0.2", optional = true }
tera = { version = "^0.8", optional = true }
