[package]
name = "rocket_contrib"
version = "0.4.0-dev"
authors = ["Sergio Benitez <sb@sergio.bz>"]
description = "Community contributed libraries for the Rocket web framework."
documentation = "https://api.rocket.rs/rocket_contrib/"
homepage = "https://rocket.rs"
repository = "https://github.com/SergioBenitez/Rocket"
readme = "../README.md"
keywords = ["rocket", "web", "framework", "contrib", "contributed"]
license = "MIT/Apache-2.0"

[features]
default = ["json"]
json = ["serde", "serde_json"]
msgpack = ["serde", "rmp-serde"]
tera_templates = ["tera", "templates"]
handlebars_templates = ["handlebars", "templates"]

# Internal use only.
templates = ["serde", "serde_json", "glob"]

[dependencies]
rocket = { version = "0.4.0-dev", path = "../lib/" }
log = "^0.3"

# UUID dependencies.
uuid = { version = "^0.5", optional = true }

# Serialization and templating dependencies.
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
rmp-serde = { version = "^0.13", optional = true }

# Templating dependencies only.
handlebars = { version = "^0.29", optional = true }
glob = { version = "^0.2", optional = true }
tera = { version = "^0.10", optional = true }

[package.metadata.docs.rs]
all-features = true
