[workspace]
members = [
  "cookies",
  "errors",
  "forms",
  "hello_person",
  "query_params",
  "hello_world",
  "manual_routes",
  "optional_redirect",
  "redirect",
  "static_files",
  "todo",
  "content_types",
  "ranking",
  "testing",
  "request_local_state",
  "request_guard",
  "stream",
  "json",
  "msgpack",
  "handlebars_templates",
  "tera_templates",
  "config",
  "raw_upload",
  "pastebin",
  "state",
  "managed_queue",
  "uuid",
  "session",
  "raw_sqlite",
  "tls",
  "fairings",
  "hello_2018",
]
