[package]
name = "rocket"
version = "0.4.0-dev"
authors = ["Sergio Benitez <sb@sergio.bz>"]
description = """
Web framework for nightly with a focus on ease-of-use, expressibility, and speed.
"""
documentation = "https://api.rocket.rs/rocket/"
homepage = "https://rocket.rs"
repository = "https://github.com/SergioBenitez/Rocket"
readme = "../README.md"
keywords = ["rocket", "web", "framework", "server"]
license = "MIT/Apache-2.0"
build = "build.rs"
categories = ["web-programming::http-server"]

[features]
tls = ["rustls", "hyper-sync-rustls"]

[dependencies]
yansi = { version = "0.3.3", features = ["nightly"] }
log = "0.3"
percent-encoding = "1"
toml = "0.4.2"
num_cpus = "1.0"
state = "0.3.1"
time = "0.1"
memchr = "1"
base64 = "0.7"
smallvec = "0.4"
pear = "0.0.11"
pear_codegen = "0.0.11"
rustls = { version = "0.11.0", optional = true }
hyper = { version = "0.10.13", default-features = false }
hyper-sync-rustls = { version = "0.3.0-rc.1", features = ["server"], optional = true }
ordermap = "0.3"
isatty = "0.1"

[dependencies.cookie]
git = "https://github.com/alexcrichton/cookie-rs"
rev = "b8298e"
features = ["percent-encode", "secure"]

[dev-dependencies]
lazy_static = "0.2"
rocket_codegen = { version = "0.4.0-dev", path = "../codegen" }

[build-dependencies]
yansi = "0.3"
version_check = "0.1.3"

[package.metadata.docs.rs]
all-features = true
