[package]
name = "rocket"
version = "0.4.0-dev"
authors = ["Sergio Benitez <sb@sergio.bz>"]
description = """
Web framework for nightly with a focus on ease-of-use, expressibility, and speed.
"""
documentation = "https://api.rocket.rs/rocket/"
homepage = "https://rocket.rs"
repository = "https://github.com/SergioBenitez/Rocket"
readme = "../README.md"
keywords = ["rocket", "web", "framework", "server"]
license = "MIT/Apache-2.0"
build = "build.rs"
categories = ["web-programming::http-server"]

[features]
tls = ["rustls", "hyper-sync-rustls"]

[dependencies]
yansi = "0.4"
log = "0.4"
percent-encoding = "1"
toml = "0.4.2"
num_cpus = "1.0"
state = "0.4"
time = "0.1"
memchr = "2"
base64 = "0.9"
smallvec = "0.6"
pear = "0.0.13"
pear_codegen = "0.0.13"
rustls = { version = "0.12.0", optional = true }
hyper = { version = "0.10.13", default-features = false }
hyper-sync-rustls = { version = "=0.3.0-rc.2", features = ["server"], optional = true }
ordermap = "0.3"
isatty = "0.1"

[dependencies.cookie]
git = "https://github.com/alexcrichton/cookie-rs"
rev = "8579b4b"
features = ["percent-encode", "secure"]

[dev-dependencies]
lazy_static = "1.0"
rocket_codegen = { version = "0.4.0-dev", path = "../codegen" }

[build-dependencies]
yansi = "0.4"
version_check = "0.1.3"

[package.metadata.docs.rs]
all-features = true
