[package]
name = "testbench"
description = "End-to-end HTTP Rocket testbench."
version = "0.0.0"
edition = "2021"
publish = false

[workspace]

[dependencies]
thiserror = "1.0"
procspawn = "1"
pretty_assertions = "1.4.0"
ipc-channel = "0.18"
rustls-pemfile = "2.1"

[dependencies.nix]
version = "0.28"
features = ["signal"]

[dependencies.rocket]
path = "../core/lib/"
features = ["secrets", "tls", "mtls"]

[dependencies.reqwest]
version = "0.12.3"
default-features = false
features = ["rustls-tls-manual-roots", "charset", "cookies", "blocking", "http2"]
