[package]
name = "rocket_contrib_codegen"
version = "0.5.0-dev"
authors = ["Sergio Benitez <sb@sergio.bz>"]
description = "Procedural macros for the Rocket contrib libraries."
documentation = "https://api.rocket.rs/v0.5/rocket_contrib/"
homepage = "https://rocket.rs"
repository = "https://github.com/SergioBenitez/Rocket"
readme = "../../README.md"
keywords = ["rocket", "contrib", "code", "generation", "proc-macro"]
license = "MIT/Apache-2.0"
build = "build.rs"
edition = "2018"

[features]
database_attribute = []

[lib]
proc-macro = true

[dependencies]
devise = "0.2"
quote = "0.6"

[build-dependencies]
yansi = "0.5"
version_check = "0.9.1"

[dev-dependencies]
compiletest_rs = { version = "0.3", features = ["stable"] }
rocket = { version = "0.5.0-dev", path = "../../core/lib" }
rocket_contrib = { version = "0.5.0-dev", path = "../lib", features = ["diesel_sqlite_pool"] }
