[package]
name = "rocket_dyn_templates"
version = "0.1.0"
authors = ["Sergio Benitez <sb@sergio.bz>"]
description = "Dynamic templating engine integration for Rocket."
documentation = "https://api.rocket.rs/master/rocket_dyn_templates/"
homepage = "https://rocket.rs"
repository = "https://github.com/rwf2/Rocket/tree/master/contrib/dyn_templates"
readme = "README.md"
keywords = ["rocket", "framework", "templates", "templating", "engine"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.75"

[lints.clippy]
type_complexity = "allow"
multiple_bound_locations = "allow"

[features]
tera = ["dep:tera"]
handlebars = ["dep:handlebars"]
minijinja = ["dep:minijinja"]

[dependencies]
walkdir = "2.4"
notify = "6"
normpath = "1"

tera = { version = "1.19.0", optional = true }
handlebars = { version = "5.1", optional = true }
minijinja = { version = "1.0.16", optional = true, features = ["loader"] }

[dependencies.rocket]
version = "0.6.0-dev"
path = "../../core/lib"
default-features = false

[dev-dependencies]
pretty_assertions = "1.4"

[package.metadata.docs.rs]
all-features = true
