[package]
name = "rocket_ws"
version = "0.1.0"
authors = ["Sergio Benitez <sb@sergio.bz>"]
description = "WebSocket support for Rocket."
documentation = "https://api.rocket.rs/master/rocket_ws/"
homepage = "https://rocket.rs"
repository = "https://github.com/rwf2/Rocket/tree/master/contrib/ws"
readme = "README.md"
keywords = ["rocket", "web", "framework", "websocket"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.75"

[features]
default = ["tungstenite"]
tungstenite = ["tokio-tungstenite"]

[dependencies]
tokio-tungstenite = { version = "0.21", optional = true }

[dependencies.rocket]
version = "0.6.0-dev"
path = "../../core/lib"
default-features = false

[package.metadata.docs.rs]
all-features = true
