[package]
name = "rocket_codegen"
version = "0.5.0-dev"
authors = ["Sergio Benitez <sb@sergio.bz>"]
description = "Procedural macros for the Rocket web framework."
documentation = "https://api.rocket.rs/v0.5/rocket_codegen/"
homepage = "https://rocket.rs"
repository = "https://github.com/SergioBenitez/Rocket"
readme = "../../README.md"
keywords = ["rocket", "web", "framework", "code", "generation"]
license = "MIT OR Apache-2.0"
build = "build.rs"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
indexmap = "1.0"
quote = "1.0"
rocket_http = { version = "0.5.0-dev", path = "../http/" }
devise = { git = "https://github.com/SergioBenitez/Devise.git", rev = "952866f7" }
glob = "0.3"

[build-dependencies]
yansi = "0.5"
version_check = "0.9.1"

[dev-dependencies]
rocket = { version = "0.5.0-dev", path = "../lib" }
version_check = "0.9"
trybuild = "1.0"
