[package]
name = "rocket_codegen"
version = "0.5.0-dev"
authors = ["Sergio Benitez <sb@sergio.bz>"]
description = "Procedural macros for the Rocket web framework."
documentation = "https://api.rocket.rs/master/rocket_codegen/"
homepage = "https://rocket.rs"
repository = "https://github.com/SergioBenitez/Rocket"
readme = "../../README.md"
keywords = ["rocket", "web", "framework", "code", "generation"]
license = "MIT OR Apache-2.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
indexmap = "1.0"
quote = "1.0"
syn = { version = "1.0.72", features = ["full", "visit", "visit-mut", "extra-traits"] }
proc-macro2 = "1.0.27"
devise = { git = "https://github.com/SergioBenitez/Devise.git", rev = "f2431b" }
rocket_http = { version = "0.5.0-dev", path = "../http/" }
unicode-xid = "0.2"
glob = "0.3"

[dev-dependencies]
rocket = { version = "0.5.0-dev", path = "../lib", features = ["json"] }
version_check = "0.9"
trybuild = "1.0"
