[package]
name = "rocket_http"
version = "0.5.0-dev"
authors = ["Sergio Benitez <sb@sergio.bz>"]
description = """
Types, traits, and parsers for HTTP requests, responses, and headers.
"""
documentation = "https://api.rocket.rs/v0.5/rocket_http/"
homepage = "https://rocket.rs"
repository = "https://github.com/SergioBenitez/Rocket"
readme = "../../README.md"
keywords = ["rocket", "web", "framework", "http"]
license = "MIT OR Apache-2.0"
categories = ["web-programming"]
edition = "2018"

[features]
default = []
tls = ["tokio-rustls"]
private-cookies = ["cookie/private", "cookie/key-expansion"]

[dependencies]
smallvec = "1.0"
percent-encoding = "2"
hyper = { version = "0.13.0", default-features = false }
http = "0.2"
mime = "0.3.13"
time = "0.2.11"
indexmap = "1.0"
state = "0.4"
tokio-rustls = { version = "0.14.0", optional = true }
tokio = { version = "0.2.9", features = ["sync", "tcp", "time"] }
unicode-xid = "0.2"
log = "0.4"
ref-cast = "1.0"
uncased = "0.9"
parking_lot = "0.11"

[dependencies.cookie]
git = "https://github.com/SergioBenitez/cookie-rs.git"
rev = "9675944"
features = ["percent-encode"]

[dependencies.pear]
git = "https://github.com/SergioBenitez/Pear.git"
rev = "4b68055"

[dev-dependencies]
rocket = { version = "0.5.0-dev", path = "../lib" }

[build-dependencies]
version_check = "0.9"
